# opencl_jumpstart

./: .gitignore  CMakeLists.txt  cl_helper.hpp  cltest.cl  clutils.cpp  clutils.h  main.cpp
